[package]
name = "rustynet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echonet-lite = { git = "https://github.com/marcelocf/echonet-lite-rs.git", branch = "marcelocf/1/singlefunctionlighting" }
tracing = "0.1"
tracing-subscriber = "0.3"
